--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
     "build": "tsc",
-    "dev": "ts-node-dev src/app.ts",
-    "start": "ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/index.ts",
+    "start": "ts-node src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "inspect": "ts-node-dev --debug --inspect -- src/index.ts"
   },
   "author": "< Укажите здесь автора работы >",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.6.3",
-    "eslint": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "ts-node": "^10.9.1",
@@ -24,6 +28,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.0"
   }
 }
