--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "./src/index.ts"
+    "src/**/*.ts",
   ],
   "exclude": [
     "node_modules"
