--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
@@ -28,7 +29,10 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "validator": "^13.7.0"
   }
 }
