--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Kamil-Kalandarov",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.6.3",
@@ -28,11 +29,15 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "celebrate": "^15.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
+    "express-winston": "^4.2.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   }
 }
