--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "celebrate": "^15.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
